# Odo-Tasks

./: README.md  design-qa.md  design.md  index.html  package-lock.json  package.json  playwright.config.ts  tokens.css  tokens.json  tsconfig.json  vite.config.ts
.hallmark/: log.json  preflight.json
docs/qa/: design-qa.md
openspec/: config.yaml
openspec/changes/archive/2026-07-17-enable-note-folder-drag-drop/: design.md
openspec/changes/archive/2026-07-17-harden-mcp-conformance/: proposal.md
openspec/changes/archive/2026-07-17-harden-mcp-mutation-validation/: design.md  proposal.md
openspec/changes/enable-note-folder-drag-drop/: proposal.md  tasks.md
openspec/changes/enable-note-folder-drag-drop/specs/note-folder-drag-drop/: spec.md
openspec/changes/harden-mcp-conformance/: design.md  tasks.md
openspec/changes/harden-mcp-conformance/specs/mcp-conformance/: spec.md
openspec/changes/harden-mcp-mutation-validation/: tasks.md
openspec/changes/harden-mcp-mutation-validation/specs/mcp-mutation-validation/: spec.md
openspec/specs/mcp-conformance/: spec.md
openspec/specs/mcp-mutation-validation/: spec.md
openspec/specs/note-folder-drag-drop/: spec.md
scripts/: test-mcp-conformance.mjs
src/: main.ts  styles.css  ui-bridges.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
src/components/ui/: checkbox.tsx  dropdown-menu.tsx  tabs.tsx
tests/e2e/: note-folder-drag.spec.ts  task-calendar-drag.spec.ts  task-projects-tab.spec.ts
