[package]
name = "odo-tasks"
version = "0.1.1"
description = "A desktop task application built with Tauri"
authors = ["Odo Tasks contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "odo_tasks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled", "backup"] }
rmcp = { version = "2.2.0", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tokio-util = "0.7"
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
schemars = "1.2"
